--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--article.html
@@ -1,16 +1,22 @@
 <!--/*
   Search Result Module - Type: Article (Interal & External)
+
+  -
+  NOTE: If the HTML structure of this file changes, please also Update the file:
+  `/eaton.frontend/src/components/search-results/js/search-results.js`
+  Since that files contains a Javascript Template that is used when more results are loaded with AJAX
+
 */-->
 <template data-sly-template.item="${ @ data }">
 
-  <div class="results-list-module results-list-module--type-${ data.contentType }">
+  <div class="results-list-submodule results-list-submodule--type-${ data.contentType }">
 
     <!--/* Content */-->
-    <div class="results-list-module__content-wrapper">
+    <div class="results-list-submodule__content-wrapper">
 
-      <h4 class="results-list-module__name b-heading-h5">
+      <h4 class="results-list-submodule__name b-heading-h5">
         <a href="${ data.contentItem.link.url @ context='uri' }"
-          class="results-list-module__name-link"
+          class="results-list-submodule__name-link"
           target="${ data.contentItem.link.target }"
         >
           <span class="name-label">${ data.contentItem.name }</span>
@@ -24,14 +30,14 @@
       </h4>
 
       <div data-sly-test="${ data.contentItem.date }"
-        class="results-list-module__date b-body-copy-small">${ data.contentItem.date }</div>
+        class="results-list-submodule__date b-body-copy-small">${ data.contentItem.date }</div>
 
-      <div class="results-list-module__description b-body-copy-small">${ data.contentItem.description }</div>
+      <div class="results-list-submodule__description b-body-copy-small">${ data.contentItem.description }</div>
 
-      <div class="results-list-module__url b-body-copy-small">
+      <div class="results-list-submodule__url b-body-copy-small">
         <a href="${ data.contentItem.link.url @ context='uri' }"
           target="${ data.contentItem.link.target }"
-          class="results-list-module__url-link"
+          class="results-list-submodule__url-link"
           aria-label="${ 'Go to' @i18n } ${ data.contentItem.link.text }"
         >${ data.contentItem.link.text }</a>
       </div>
