--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--resource.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--resource.html
@@ -1,14 +1,20 @@
 <!--/*
   Search Result Module - Type: Resource
+
+  -
+  NOTE: If the HTML structure of this file changes, please also Update the file:
+  `/eaton.frontend/src/components/search-results/js/search-results.js`
+  Since that files contains a Javascript Template that is used when more results are loaded with AJAX
+
 */-->
 <template data-sly-template.item="${ @ data }">
 
-  <div class="results-list-module results-list-module--type-${ data.contentType }">
+  <div class="results-list-submodule results-list-submodule--type-${ data.contentType }">
 
-    <div class="results-list-module__icon-wrapper">
+    <div class="results-list-submodule__icon-wrapper">
       <a href="${ data.contentItem.link.url @ context='uri' }"
         target="${ data.contentItem.link.target }"
-        class="results-list-module__url-link"
+        class="results-list-submodule__url-link"
         aria-label="${ 'Download' @i18n } ${ data.contentItem.documentName }"
       >
         <i class="icon icon-download" aria-hidden="true"></i>
@@ -17,21 +23,21 @@
     </div>
 
     <!--/* Content */-->
-    <div class="results-list-module__content-wrapper">
+    <div class="results-list-submodule__content-wrapper">
 
-      <h4 class="results-list-module__name b-heading-h5">
+      <h4 class="results-list-submodule__name b-heading-h5">
         <a href="${ data.contentItem.link.url @ context='uri' }"
           target="${ data.contentItem.link.target }"
-          class="results-list-module__name-link"
+          class="results-list-submodule__name-link"
         >${ data.contentItem.name }</a>
       </h4>
 
-      <div class="results-list-module__document b-body-copy">${ '({0} {1})' @ format=[ data.contentItem.documentType, data.contentItem.documentSize ] }</div>
+      <div class="results-list-submodule__document b-body-copy">${ '({0} {1})' @ format=[ data.contentItem.documentType, data.contentItem.documentSize ] }</div>
 
-      <div class="results-list-module__link-url b-body-copy-small">
+      <div class="results-list-submodule__link-url b-body-copy-small">
         <a href="${ data.contentItem.link.url @ context='uri' }"
           target="${ data.contentItem.link.target }"
-          class="results-list-module__link"
+          class="results-list-submodule__link"
           aria-label="${ 'Download' @i18n } ${ data.contentItem.documentName }"
         >${ data.contentItem.link.text }</a>
       </div>
