--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -26,13 +26,14 @@
   &__mobile-container {
     z-index: 40;
     background-color: $color__white;
-    margin: 20px 0 30px;
+    margin: 60px 0 30px;
 
     &.enabled {
       position: absolute;
       top: 0;
       left: 0;
       padding: 0;
+      z-index: 501;
     }
 
     .b-button {
@@ -47,8 +48,8 @@
   .visibile { display: block; }
 
   .mobile-header {
-    position: absolute;
-    top: -80px;
+    position: fixed;
+    top: 0;
     height: 53px;
     font-size: 18px;
     left: 0;
@@ -56,17 +57,24 @@
     background-color: #666;
     width: 100%;
     padding: 15px 30px 0 30px;
+    z-index: 510;
 
-    i {
+    .close-facets-mobile {
       position: absolute;
       display: block;
-      right: 30px;
-      top: 17px;
+      right: 20px;
+      top: 50%;
+      width: 48px;
+      height: 48px;
+      transform: translateY(-50%);
     }
 
-    a {
-      color: $color__white;
+    .icon {
+      font-size: 16px;
+      position: relative;
+      top: 4px;
     }
+
   }
 
   .mobile-done {
@@ -87,7 +95,7 @@
     }
   }
 
-  &__group {
+  &__facet-item {
     border-bottom: 1px solid #e6e6e6;
   }
 
