--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -73,9 +73,9 @@
 
 .faceted-navigation__list-item { padding-left: 4px; }
 
-.faceted-navigation__mobile-container { z-index: 40; background-color: #FFF; margin: 20px 0 30px; }
+.faceted-navigation__mobile-container { z-index: 40; background-color: #FFF; margin: 60px 0 30px; }
 
-.faceted-navigation__mobile-container.enabled { position: absolute; top: 0; left: 0; padding: 0; }
+.faceted-navigation__mobile-container.enabled { position: absolute; top: 0; left: 0; padding: 0; z-index: 501; }
 
 .faceted-navigation__mobile-container .b-button { width: 100%; text-align: center; max-width: initial; }
 
@@ -83,17 +83,17 @@
 
 .faceted-navigation .visibile { display: block; }
 
-.faceted-navigation .mobile-header { position: absolute; top: -80px; height: 53px; font-size: 18px; left: 0; color: #FFF; background-color: #666; width: 100%; padding: 15px 30px 0 30px; }
+.faceted-navigation .mobile-header { position: fixed; top: 0; height: 53px; font-size: 18px; left: 0; color: #FFF; background-color: #666; width: 100%; padding: 15px 30px 0 30px; z-index: 510; }
 
-.faceted-navigation .mobile-header i { position: absolute; display: block; right: 30px; top: 17px; }
+.faceted-navigation .mobile-header .close-facets-mobile { position: absolute; display: block; right: 20px; top: 50%; width: 48px; height: 48px; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 
-.faceted-navigation .mobile-header a { color: #FFF; }
+.faceted-navigation .mobile-header .icon { font-size: 16px; position: relative; top: 4px; }
 
 .faceted-navigation .mobile-done { width: 100%; background-color: #005EB8; position: absolute; bottom: -50px; height: 50px; left: 0; padding-top: 15px; }
 
 .faceted-navigation .mobile-done a { color: #FFF; text-align: center; display: block; width: 100%; font-weight: bold; }
 
-.faceted-navigation__group { border-bottom: 1px solid #e6e6e6; }
+.faceted-navigation__facet-item { border-bottom: 1px solid #e6e6e6; }
 
 .faceted-navigation__list div:last-child { padding-bottom: 12px; }
 
