--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-autocorrected-search.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-autocorrected-search.html
@@ -1,9 +1,8 @@
 <template data-sly-template.module="${ @ data }">
-  <!--/* .desktop-container.u-visible-desktop */-->
   <div class="module-autocorrected-search">
     <div class="container">
-      <strong class="u-inline-block">${ 'Showing results for' @ i18n } <em class="module-autocorrected-search__search-term">${ data.searchTerm }</em> </strong>
-      <strong>${ 'Search instead for' @ i18n }</strong>
+      <strong class="module-autocorrected-search__results-label">${ 'Showing results for' @ i18n } <em class="module-autocorrected-search__results-term">${ data.searchTerm }</em> </strong>
+      <strong class="module-autocorrected-search__corrected-label">${ 'Search instead for' @ i18n }</strong>
       <a href="${ data.url }"
         class="module-autocorrected-search__corrected-term"
         target="${ data.target }">${ data.correctedTerm }</a>
