--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/product-card-sku-item.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/product-card-sku-item.html
@@ -1,5 +1,11 @@
 <!--/*
   M-36 - Product Card: SKU Item
+
+  -
+  NOTE: If the HTML structure of this file changes, please also Update the file:
+  `/eaton.frontend/src/components/product-grid/js/product-grid.js`
+  Since that files contains a Javascript Template that is used when more results are loaded with AJAX
+
 */-->
 <template data-sly-template.item="${ @ data }">
 
