--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/product-card-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/product-card-family.html
@@ -4,9 +4,10 @@
 <template data-sly-template.view="${ @ data }">
 
   <!--/* Results Wrapper */-->
-  <div class="results-list results-list--card-family"
+  <div class="results-list"
     data-results-url="${ data.ajaxRequestUrl }"
-    data-results-next-page="${ data.ajaxRequestNextPage }">
+    data-results-next-page="${ data.ajaxRequestNextPage }"
+    data-results-type="product-card-family">
 
     <!--/* Result Items - Family */-->
     <div class="results-list__content">
