[EATON-357] Fix Search result copy and search instead link copy are switched + Adding Margin between sentences

--- a/eaton.frontend/src/shared/module-autocorrected-search/css/module-autocorrected-search.scss
+++ b/eaton.frontend/src/shared/module-autocorrected-search/css/module-autocorrected-search.scss
@@ -11,7 +11,7 @@
 @import "../../../global/css/_config/sass";
 
 
-.module-autocorrected-search {
+.autocorrected-search {
 
   // Empty selector for future reference
 
@@ -21,8 +21,9 @@
   // MediaQuery: 0 to 991px
   //-----------------------------------
   @include media-mobile-and-tablet {
-
-
+    &__search-instead {
+      display: block;
+    }
   }
 
 
@@ -32,6 +33,14 @@
   //-----------------------------------
   @include media-desktop-and-up {
 
+    &__results {
+      display: inline-block;
+    }
+
+    &__search-instead {
+      display: inline-block;
+      margin-left: 16px;
+    }
 
   }
 
