--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
@@ -1,7 +1,25 @@
-.module-product-detail-card__title { margin: 35px 0; position: relative; }
+.module-product-detail-card { padding: 35px 0; }
+
+.module-product-detail-card--image-container { text-align: center; }
+
+.module-product-detail-card--image-container img { display: inline-block; width: 100%; max-width: 553px; }
+
+.module-product-detail-card__title { margin: 0 0 35px 0; position: relative; }
 
 .module-product-detail-card__title::before { content: ""; position: absolute; background: #005EB8; height: 4px; width: 60px; bottom: -15px; }
 
 .module-product-detail-card__price { margin: 30px 0; }
 
 .module-product-detail-card__price span { color: #5B6770; padding-left: 5px; }
+
+.module-product-detail-card__links { padding: 20px 0; }
+
+.module-product-detail-card__links--header { color: #005EB8; }
+
+.module-product-detail-card__links ul { list-style: none; padding: 20px 0px; }
+
+.module-product-detail-card__links ul li { padding: 0; }
+
+.module-product-detail-card__links ul li a { display: inline-block; padding: 0 0 10px 0; }
+
+.module-product-detail-card__links ul .icon { vertical-align: middle; padding-right: 10px; }
