[EATON-119] Update Button appearance (primary style to tertiary style)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
@@ -25,7 +25,7 @@
             <a href="${data.cta.url}"
                aria-label="Go to ${ data.cta.title }"
                target="${ tada.cta.target }"
-               class="b-button b-button__primary b-button__primary--light" >
+               class="b-button b-button__tertiary b-button__tertiary--light" >
               ${ data.cta.title }
             </a>
           </div>
