--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
@@ -2,7 +2,7 @@
   <div class="module-product-detail-card">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-5 module-product-detail-card--image-container">
+        <div class="col-xs-12 col-md-6 module-product-detail-card--image-container">
           <img class="img-responsive"
               src="${data.image.desktop}"
               data-src="${data.image.desktop}"
@@ -10,14 +10,15 @@
               data-tablet-rendition="${data.item.tablet}"
               data-mobile-rendition="${data.item.mobile}" />
         </div>
-        <div class="col-xs-12 col-md-7">
+        <div class="col-xs-12 col-md-6">
           <h1 class="module-product-detail-card__title">
             ${data.title}
           </h1>
           <div class="module-product-detail-card__description b-body-copy">
             ${data.description}
           </div>
-          <div class="module-product-detail-card__price b-body-copy-small">
+          <div data-sly-test="${ data.price }"
+               class="module-product-detail-card__price b-body-copy-small">
             <b>${data.priceLabel}</b>
             <span>${data.price}</span>
           </div>
@@ -31,7 +32,9 @@
           </div>
           <div class="module-product-detail-card__links">
             <div>
-              <div class="module-product-detail-card__links--header b-body-copy-small">${ data.linksHeader }</div>
+              <div class="module-product-detail-card__links--header b-body-copy-small">
+                ${ data.linksHeader }
+              </div>
 
               <ul data-sly-list="${data.links}">
                 <li>
