Remove extra “>” symbol from Product Grid Template

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/product-card-sku.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/product-card-sku.html
@@ -7,7 +7,7 @@
   <div class="results-list"
     data-results-url="${ data.ajaxRequestUrl }"
     data-results-next-page="${ data.ajaxRequestNextPage }"
-    data-results-type="product-card-sku">>
+    data-results-type="product-card-sku">
 
     <!--/* Result Items - SKU */-->
     <div class="results-list__content">
