--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -1,1 +1,27 @@
-.module-media-gallery { border-top: 4px solid #005EB8; }
+.module-media-gallery__text { padding-bottom: 30px; }
+
+.module-media-gallery__headline { margin-bottom: 30px; }
+
+.module-media-gallery__description { margin-bottom: 30px; }
+
+.module-media-gallery__slide-container { position: relative; }
+
+.module-media-gallery__slide-image { position: relative; }
+
+.module-media-gallery__slide-utility { position: absolute; bottom: 0; }
+
+.module-media-gallery__slide-utility .icon { color: #005EB8; }
+
+.module-media-gallery__download { left: 0; }
+
+.module-media-gallery__zoom { right: 0; }
+
+.module-media-gallery__arrows-item { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); color: #CCD2D7; }
+
+.module-media-gallery__prev-slide { left: 0; }
+
+.module-media-gallery__next-slide { right: 0; }
+
+@media screen and (min-width: 992px) { .module-media-gallery { padding: 60px 0 120px; }
+  .module-media-gallery__arrows-item .icon { font-size: 37px; }
+  .module-media-gallery__slide-info { margin: 30px 0 30px; padding-left: 30px; border-left: 1px solid #98A4AE; } }
