--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -7,18 +7,21 @@
 
 .module-media-gallery {
 
-  &__text {
-    padding-bottom: ($spacing__md / 2);
+  //-----------------------------------
+  // Gallery Headline & Description
+  //-----------------------------------
+  &__text,
+  &__description {
+    margin-bottom: ($spacing__md / 2);
   }
 
   &__headline {
     margin-bottom: $spacing__sm;
   }
 
-  &__description {
-    margin-bottom: ($spacing__md / 2);
-  }
-
+  //-----------------------------------
+  // Slide Container
+  //-----------------------------------
   &__slide-container {
     position: relative;
   }
@@ -32,6 +35,8 @@
     }
   }
 
+
+  // Zoom & Download Styles
   &__slide-utility {
     position: absolute;
     bottom: 0;
@@ -49,19 +54,49 @@
     right: 0;
   }
 
-  &__arrows-item {
+  // Slide Item - Text & description
+  &__slide-info {
+    padding: $spacing__sm 0 $spacing__sm $spacing__sm;
+    border-left: 1px solid $color__secondary-gray4;
+  }
+
+  &__slide-text {
+    margin-bottom: 0;
+  }
+
+  // Slide Arrows - Prev & Next
+  &__arrows {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     color: $color__secondary-gray4;
   }
 
-  &__prev-slide {
+  &__prev-arrow {
     left: 0;
   }
 
-  &__next-slide {
+  &__next-arrow {
     right: 0;
+  }
+
+  //-----------------------------------
+  // Thumbnail Container
+  //-----------------------------------
+  &__thumbnail-container {
+    position: relative;
+  }
+
+  &__thumbnail-list {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+  }
+
+  &__thumbnail-container {
+    .module-media-gallery__arrows {
+      color: $color__primary-blue;
+    }
   }
 
   //-----------------------------------
@@ -76,17 +111,24 @@
   @include media-desktop-and-up {
     padding: $spacing__md 0 $spacing__xl;
 
-    &__arrows-item {
+    &__slide-container {
+      .module-media-gallery__arrows {
+        .icon {
+          font-size: 37px;
+        }
+      }
+    }
 
-      .icon {
-        font-size: 37px;
+    &__thumbnail-container {
+      .module-media-gallery__arrows {
+        .icon {
+          font-size: 12px;
+        }
       }
     }
 
     &__slide-info {
       margin: $spacing__sm 0 $spacing__sm;
-      padding-left: $spacing__sm;
-      border-left: 1px solid $color__primary-gray3;
     }
   }
 }
