--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -37,20 +37,20 @@
 
                 <!--*/ Slide Item - Title & Description */-->
                 <div class="module-media-gallery__slide-info" data-sly-test="${item.title} || ${item.text}">
-                    <h4 data-sly-test="${item.title}" class="b-heading-h5">${item.title}</h4>
-                    <p data-sly-test="${item.text}" class="b-body-copy">${item.text}</p>
+                    <h4 data-sly-test="${item.title}" class="module-media-gallery__slide-title b-heading-h5">${item.title}</h4>
+                    <p data-sly-test="${item.text}" class="module-media-gallery__slide-text b-body-copy">${item.text}</p>
                 </div>
             </div>
           </div>
 
           <!--*/ Slide Preview Arrows */-->
           <sly data-sly-test="${data.items.length > 1}">
-              <button class="module-media-gallery__prev-slide module-media-gallery__arrows-item button--reset">
+              <button class="module-media-gallery__prev-arrow module-media-gallery__arrows button--reset">
                 <span class="sr-only">Prev</span>
                 <i class="icon icon-chevron-left" aria-hidden="true"></i>
               </button>
 
-              <button class="module-media-gallery__next-slide module-media-gallery__arrows-item button--reset">
+              <button class="module-media-gallery__next-arrow module-media-gallery__arrows button--reset">
                 <span class="sr-only">Next</span>
                 <i class="icon icon-chevron-right" aria-hidden="true"></i>
               </button>
@@ -73,12 +73,12 @@
 
               <!--*/ Thumbnail Arrows */-->
               <sly data-sly-test="${data.items.length > 1}">
-                  <button class="module-media-gallery__prev-thumbnail module-media-gallery__thumbnail-arrows button--reset">
+                  <button class="module-media-gallery__prev-arrow module-media-gallery__arrows button--reset">
                     <span class="sr-only">Prev</span>
                     <i class="icon icon-chevron-left" aria-hidden="true"></i>
                   </button>
 
-                  <button class="module-media-gallery__next-thumbnail module-media-gallery__thumbnail-arrows button--reset">
+                  <button class="module-media-gallery__next-arrow module-media-gallery__arrows button--reset">
                     <span class="sr-only">Next</span>
                     <i class="icon icon-chevron-right" aria-hidden="true"></i>
                   </button>
