--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -1,8 +1,6 @@
-.module-media-gallery__text { padding-bottom: 30px; }
+.module-media-gallery__text, .module-media-gallery__description { margin-bottom: 30px; }
 
 .module-media-gallery__headline { margin-bottom: 30px; }
-
-.module-media-gallery__description { margin-bottom: 30px; }
 
 .module-media-gallery__slide-container { position: relative; }
 
@@ -18,12 +16,23 @@
 
 .module-media-gallery__zoom { right: 0; }
 
-.module-media-gallery__arrows-item { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); color: #CCD2D7; }
+.module-media-gallery__slide-info { padding: 30px 0 30px 30px; border-left: 1px solid #CCD2D7; }
 
-.module-media-gallery__prev-slide { left: 0; }
+.module-media-gallery__slide-text { margin-bottom: 0; }
 
-.module-media-gallery__next-slide { right: 0; }
+.module-media-gallery__arrows { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); color: #CCD2D7; }
+
+.module-media-gallery__prev-arrow { left: 0; }
+
+.module-media-gallery__next-arrow { right: 0; }
+
+.module-media-gallery__thumbnail-container { position: relative; }
+
+.module-media-gallery__thumbnail-list { padding: 0; margin: 0; list-style-type: none; }
+
+.module-media-gallery__thumbnail-container .module-media-gallery__arrows { color: #005EB8; }
 
 @media screen and (min-width: 992px) { .module-media-gallery { padding: 60px 0 120px; }
-  .module-media-gallery__arrows-item .icon { font-size: 37px; }
-  .module-media-gallery__slide-info { margin: 30px 0 30px; padding-left: 30px; border-left: 1px solid #98A4AE; } }
+  .module-media-gallery__slide-container .module-media-gallery__arrows .icon { font-size: 37px; }
+  .module-media-gallery__thumbnail-container .module-media-gallery__arrows .icon { font-size: 12px; }
+  .module-media-gallery__slide-info { margin: 30px 0 30px; } }
