t5-category-with-list -> Category Highlight – make it to display test data with only 2 articles

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-default-3-column-data.js">
+<sly data-sly-use.data="${'../data/view-default-data.js' @testdata=properties.testdata}">
 
     <!--/* Container */-->
     <div class="container eaton-list-component eaton-list-component-default-view">
