--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -2,12 +2,6 @@
   <div class="module-media-gallery">
     <div class="container">
       <div class="row">
-        <!--*/ Gallery - Title & Description */-->
-        <div class="module-media-gallery__text" data-sly-test="${data.headline} || ${data.description}">
-          <h3 data-sly-test="${data.headline}" class="module-media-gallery__headline b-heading-h3">${data.headline}</h3>
-          <p data-sly-test="${data.description}" class="module-media-gallery__description b-body-copy">${data.description}</p>
-        </div>
-
         <!--*/ Slide Container */-->
         <div class="module-media-gallery__slide-container">
 
@@ -17,11 +11,13 @@
             <div class="module-media-gallery__slide-item" data-slide-item="${isVideo == true ? 'image' : 'video'}">
 
                 <!--*/ Slide Item - Image */-->
-                <div class="module-media-gallery__slide-image">
-                  <img data-src="${item.images.preview}"
+                <div class="module-media-gallery__slide-image embed-responsive embed-responsive-16by9">
+                  <img class="embed-responsive-item"
+                      data-src="${item.images.preview}"
                       data-desktop-rendition="${item.images.preview}"
                       data-mobile-rendition="${item.images.preview}"
-                      alt="${item.imageAlt}" />
+                      alt="${item.images.altText}"
+                      data-lazy="${item.images.thumbnail}"/>
 
                   <!--*/ Slide Item - Utility - Zoom & Download */-->
                   <a href="${item.images.download}" download class="module-media-gallery__download module-media-gallery__slide-utility">
@@ -66,7 +62,7 @@
                 <li class="module-media-gallery__thumbnail-item" data-thumbnail-item="${isVideo == true ? 'image' : 'video'}">
                     <!--*/ Thumbnail Item - Image */-->
                     <div class="module-media-gallery__thumbnail-image">
-                      <img src="${item.images.thumbnail}" alt="${item.imageAlt}" />
+                      <img src="${item.images.thumbnail}" alt="${item.images.altText}" />
                     </div>
                 </li>
               </ul>
