[M-48] Restore Media Gallery Headline & Description - It will be included in the data model

--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -8,6 +8,19 @@
 .module-media-gallery {
 
   //-----------------------------------
+  // Gallery Headline & Description
+  //-----------------------------------
+  &__header,
+  &__description {
+    margin-bottom: ($spacing__md / 2);
+  }
+
+  &__headline {
+    margin-bottom: $spacing__sm;
+  }
+
+
+  //-----------------------------------
   // Slide Container
   //-----------------------------------
   &__slide-container {
