--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -70,8 +70,7 @@
   // Slide Arrows - Prev & Next
   &__arrows {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 0;
     color: $color__secondary-gray4;
     border: 1px solid red;
   }
