--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -25,17 +25,24 @@
   //-----------------------------------
   &__slide-container {
     position: relative;
-    border: 2px solid mediumseagreen;
   }
 
-  &__slide-image {
+  &__slide-preview {
     position: relative;
     text-align: center;
     border: 1px solid indianred;
+  }
+
+  // Wrapper Div used to maintain image aspect ratio
+  &__image-wrapper {
 
     img {
-      display: inline-block;
+      height: 100%;
+      width: auto;
+      margin-left: auto;
+      margin-right: auto;
     }
+
   }
 
 
@@ -72,7 +79,7 @@
     position: absolute;
     top: 0;
     color: $color__secondary-gray4;
-    border: 1px solid red;
+    border: 1px solid mediumseagreen;
   }
 
   &__prev-arrow {
