--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -2,11 +2,11 @@
 
 .module-media-gallery__headline { margin-bottom: 30px; }
 
-.module-media-gallery__slide-container { position: relative; border: 2px solid mediumseagreen; }
+.module-media-gallery__slide-container { position: relative; }
 
-.module-media-gallery__slide-image { position: relative; text-align: center; border: 1px solid indianred; }
+.module-media-gallery__slide-preview { position: relative; text-align: center; border: 1px solid indianred; }
 
-.module-media-gallery__slide-image img { display: inline-block; }
+.module-media-gallery__image-wrapper img { height: 100%; width: auto; margin-left: auto; margin-right: auto; }
 
 .module-media-gallery__slide-utility { position: absolute; bottom: 0; }
 
@@ -20,7 +20,7 @@
 
 .module-media-gallery__slide-text { margin-bottom: 0; }
 
-.module-media-gallery__arrows { position: absolute; top: 0; color: #CCD2D7; border: 1px solid red; }
+.module-media-gallery__arrows { position: absolute; top: 0; color: #CCD2D7; border: 1px solid mediumseagreen; }
 
 .module-media-gallery__prev-arrow { left: 0; }
 
