--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -106,6 +106,18 @@
   &__thumbnail-container {
     .module-media-gallery__arrows {
       color: $color__primary-blue;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &__thumbnail-image-wrapper {
+
+    img {
+      height: 100%;
+      width: auto;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 
