--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -68,11 +68,15 @@
               <!--*/ Thumbnail List */-->
               <ul class="module-media-gallery__thumbnail-list" data-sly-list="${data.items}">
                 <!--*/ Thumbnail Item - Preview */-->
-                <li class="module-media-gallery__thumbnail-item" data-thumbnail-item="${isVideo == true ? 'image' : 'video'}">
-                    <!--*/ Thumbnail Item - Image */-->
-                    <div class="module-media-gallery__thumbnail-image">
+                <li class="module-media-gallery__thumbnail-item"
+                  data-thumbnail-item="${isVideo == true ? 'image' : 'video'}">
+
+                  <!--*/ Thumbnail Item - Image */-->
+                  <div class="module-media-gallery__thumbnail-aspect-ratio embed-responsive embed-responsive-16by9">
+                    <div class="module-media-gallery__thumbnail-image-wrapper embed-responsive-item">
                       <img src="${item.images.thumbnail}" alt="${item.images.altText}" />
                     </div>
+                  </div>
                 </li>
               </ul>
 
