--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -30,7 +30,9 @@
 
 .module-media-gallery__thumbnail-list { padding: 0; margin: 0; list-style-type: none; }
 
-.module-media-gallery__thumbnail-container .module-media-gallery__arrows { color: #005EB8; }
+.module-media-gallery__thumbnail-container .module-media-gallery__arrows { color: #005EB8; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+
+.module-media-gallery__thumbnail-image-wrapper img { height: 100%; width: auto; margin-left: auto; margin-right: auto; }
 
 @media screen and (min-width: 992px) { .module-media-gallery { padding: 60px 0 120px; }
   .module-media-gallery__slide-container .module-media-gallery__arrows .icon { font-size: 37px; }
