--- a/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
+++ b/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
@@ -44,21 +44,19 @@
   &__links {
     padding: 20px 0;
 
-    &--header {
-      color: $color__primary-blue;
-    }
-
     ul {
       list-style: none;
       padding: 20px 0px;
 
       li {
-          padding: 0;
+        padding: 0;
+        min-height: 36px;
 
-          a {
-            display: inline-block;
-            padding: 0 0 10px 0;
-          }
+        a {
+          color: $color__primary-blue;
+          display: inline-block;
+          padding: 0 0 10px 0;
+        }
       }
 
       .icon {
