--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
@@ -4,6 +4,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-6 module-product-detail-card--image-container">
           <img class="img-responsive"
+              alt="${data.image.altText}"
               src="${data.image.desktop}"
               data-src="${data.image.desktop}"
               data-desktop-rendition="${data.item.desktop}"
@@ -12,14 +13,14 @@
         </div>
         <div class="col-xs-12 col-md-6">
           <h1 class="module-product-detail-card__title">
-            ${data.title}
+            ${ data.title }
           </h1>
           <div class="module-product-detail-card__description b-body-copy">
-            ${data.description}
+            ${ data.description }
           </div>
           <div data-sly-test="${ data.price }"
                class="module-product-detail-card__price b-body-copy-small">
-            <b>${data.priceLabel}</b>
+            <b>${ 'LIST PRICE' @ i18n }</b>
             <span>${data.price}</span>
           </div>
           <div class="module-product-detail-card__actions">
@@ -32,15 +33,13 @@
           </div>
           <div class="module-product-detail-card__links">
             <div>
-              <div class="module-product-detail-card__links--header b-body-copy-small">
-                ${ data.linksHeader }
-              </div>
-
               <ul data-sly-list="${data.links}">
                 <li>
                   <a  href="${item.url}"
-                      aria-label="Go to ${ item.title }">
-                    <i class="icon icon-link-external" aria-hidden="true"></i>
+                      aria-label="Go to ${ item.title }"
+                  ><i data-sly-test="${item.target == '_blank'}"
+                      class="icon icon-link-external"
+                      aria-hidden="true"></i>
                     ${ item.title }
                   </a>
                 </li>
