--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -15,6 +15,7 @@
   .eaton-link-list-vertical__list-link,
   .eaton-link-list-vertical__eyebrow {
     font-weight: bold;
+    text-transform: none;
   }
 
   &__text {
@@ -31,8 +32,34 @@
   // }
 
   @include media-mobile-only {
+    &__title {
+      padding-bottom: $spacing__sm;
+    }
+
     &__list-title {
       margin-top: $spacing__sm;
+    }
+
+    &__link-list {
+      padding-bottom: 15px;
+
+    }
+
+    &__text {
+      margin-bottom: $spacing__sm;
+    }
+
+    &__button-container {
+      margin-top: 0;
+
+      .b-button.b-button__primary {
+        width: 100%;
+      }
+    }
+
+    .eaton-link-list-vertical__eyebrow {
+      margin-bottom: 10px;
+      font-size: 18px;
     }
   }
 
