--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -22,6 +22,14 @@
 
 .eaton-search--default__form-input { color: #FFF; background: transparent; padding: 0; }
 
+.eaton-search--default__form-input:focus::-webkit-input-placeholder { /* Chrome/Opera/Safari */ color: transparent; }
+
+.eaton-search--default__form-input:focus::-moz-placeholder { /* Firefox 19+ */ color: transparent; }
+
+.eaton-search--default__form-input:focus:-ms-input-placeholder { /* IE 10+ */ color: transparent; }
+
+.eaton-search--default__form-input:focus:-moz-placeholder { /* Firefox 18- */ color: transparent; }
+
 .eaton-search--default__form-external { color: #FFF; -ms-flex-item-align: center; align-self: center; border-right: 1px solid #FFF; padding-right: 20px; }
 
 .eaton-search--default__form-submit { color: #FFF; background: transparent; padding: 10px 20px; }
