--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -27,6 +27,18 @@
     margin-bottom: $spacing__sm;
   }
 
+  // Generic / Shared Styles for Slider Arrows
+  //--------------
+  &__arrows {
+    color: $color__secondary-gray4;
+    position: absolute;
+    top: 0;
+  }
+
+  &__prev-arrow { left: 0; }
+
+  &__next-arrow { right: 0; }
+
 
   //-----------------------------------
   // Slide Container
@@ -83,19 +95,22 @@
   }
 
   // Slide Arrows - Prev & Next
-  &__arrows {
+  &__slide-arrows-container {
+    background: transparent;
+    left: 0;
+    pointer-events: none;
     position: absolute;
     top: 0;
-    color: $color__secondary-gray4;
+    width: 100%;
   }
 
-  &__prev-arrow {
-    left: 0;
+  // Arrows Center Alignment
+  &__slide-arrows-container &__arrows {
+    pointer-events: all;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
-  &__next-arrow {
-    right: 0;
-  }
 
   //-----------------------------------
   // Thumbnail Container
