--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -6,6 +6,12 @@
 
 .module-media-gallery__headline { margin-bottom: 30px; }
 
+.module-media-gallery__arrows { color: #CCD2D7; position: absolute; top: 0; }
+
+.module-media-gallery__prev-arrow { left: 0; }
+
+.module-media-gallery__next-arrow { right: 0; }
+
 .module-media-gallery__slide-container { position: relative; }
 
 .module-media-gallery__slide-preview { position: relative; text-align: center; }
@@ -24,11 +30,9 @@
 
 .module-media-gallery__slide-text { margin-bottom: 0; }
 
-.module-media-gallery__arrows { position: absolute; top: 0; color: #CCD2D7; }
+.module-media-gallery__slide-arrows-container { background: transparent; left: 0; pointer-events: none; position: absolute; top: 0; width: 100%; }
 
-.module-media-gallery__prev-arrow { left: 0; }
-
-.module-media-gallery__next-arrow { right: 0; }
+.module-media-gallery__slide-arrows-container .module-media-gallery__arrows { pointer-events: all; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 
 .module-media-gallery__thumbnail-container { position: relative; }
 
