--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -50,7 +50,8 @@
 
 @media screen and (min-width: 992px) { .module-media-gallery { padding: 60px 0 120px; }
   .module-media-gallery__slide-container .module-media-gallery__arrows .icon { font-size: 37px; }
-  .module-media-gallery__slide-info { margin: 30px 0 30px; }
+  .module-media-gallery__slide-preview { margin: 0 0 30px; }
+  .module-media-gallery__slide-info { margin: 0 0 30px; }
   .module-media-gallery__thumbnail-container .module-media-gallery__arrows .icon { font-size: 12px; }
   .module-media-gallery__thumbnail-item { position: relative; margin: 0 30px; padding-bottom: 10px; }
   .module-media-gallery__thumbnail-item.active:after { content: ''; position: absolute; height: 2px; width: 100%; background: #005EB8; bottom: 0; }
